# nerd

./: .gitignore  CMakeLists.txt  license.txt  todo.txt
extensions/NetworkDynamicsDiagramPlotter/: CMakeLists.txt
extensions/NetworkDynamicsDiagramPlotter/Help/: How to Add a New Calculator.tex  How to Use the Dynamics Plotter.tex
extensions/NetworkDynamicsDiagramPlotter/Matlab/: displayDiagramsInMatlab.m  matlabDynamicsPlotter.m  till_oldMatlabPlotter.m
extensions/NetworkDynamicsDiagramPlotter/NetworkDynamicsDiagramPlotterApplication/: CMakeLists.txt  NetworkDynamicsPlotterApplication.cpp  NetworkDynamicsPlotterApplication.h  getBacktrace.sh  main.cpp
extensions/NetworkDynamicsDiagramPlotter/NetworkDynamicsDiagramPlotterLib/: CMakeLists.txt  Doxyfile  DynamicsPlotConstants.cpp  DynamicsPlotConstants.h
extensions/NetworkDynamicsDiagramPlotter/testNetworkDynamicsDiagramPlotterLib/: CMakeLists.txt  main.cpp
extensions/TestPlugIn/: CMakeLists.txt  TestPlugIn.cpp  TestPlugIn.h  main.cpp  testplugin.kdevelop  testplugin.pro
extensions/VisionASeries/: CMakeLists.txt  VisionASeries.cpp  VisionASeries.h  VisionASeriesSensor.cpp  VisionASeriesSensor.h  main.cpp
nerd/applications/: CMakeLists.txt  applications.pro
nerd/applications/NerdClusterNeuroEvo/: CMakeLists.txt  EvolutionSettings.val  GridEngineSettings.val  NerdClusterNeuroEvo.pro  NerdClusterNeuroEvoApplication.cpp  NerdClusterNeuroEvoApplication.h  main.cpp  qsubCaller.sh
nerd/applications/NerdMultiCoreEvaluation/: CMakeLists.txt  MultiCoreEvaluationRunner.cpp  MultiCoreEvaluationRunner.h  NerdMultiCoreEvaluationApplication.cpp  NerdMultiCoreEvaluationApplication.h  main.cpp  myProc.sh  qsubCaller.sh
nerd/applications/NerdMultiCoreNeuroEvo/: CMakeLists.txt  NerdMultiCoreNeuroEvoApplication.cpp  NerdMultiCoreNeuroEvoApplication.h  main.cpp
nerd/applications/NerdNetworkEditor/: CMakeLists.txt  NetworkEditor.pro  NeuralNetworkEditorApplication.cpp  NeuralNetworkEditorApplication.h  main.cpp
nerd/applications/NerdNeuroEvo/: AutoStoreNetworksHelper.cpp  AutoStoreNetworksHelper.h  CMakeLists.txt  NerdNeuroEvo.pro  NerdNeuroEvoApplication.cpp  NerdNeuroEvoApplication.h  main.cpp
nerd/applications/NerdNeuroSim/: CMakeLists.txt  NerdNeuroSim.pro  NerdNeuroSimApplication.cpp  NerdNeuroSimApplication.h  main.cpp  sim.sh
nerd/applications/NerdSim/: CMakeLists.txt  NerdSim.pro  NerdSimApplication.cpp  NerdSimApplication.h  main.cpp
nerd/applications/Scripts/: MSeriesSpinalCordTagger.js  MSeriesSpinalCordTaggerStartScriptExample.sh  startNerd.sh
nerd/applications/environments/: ASeries.xml  ASeries2.xml  ASeriesCollRule.xml  ASeriesInTheSky.xml  ASeriesKneeControl.xml  ASeriesKneeControlRand.xml  ASeriesOverTheGround.xml  ASeries_disabled.xml  Khepera.xml  MSeries.xml  MSeriesChainTest.xml  MSeriesLegsWithCantileverArm.xml  MSeriesTest2.xml  MSeriesTorqueSpringMotorValues.val  MSeriesV2.xml  MSeriesV2Obsolete.xml  MSeriesV2b.xml  MSeriesV2c.xml  MSeriesV2cBothHands.xml  MSeriesV2cHand.xml  MSeriesV2d.xml  MSeriesV2dHands.xml  MorphTest.xml  ShakerBoard.val  ShakerBoard.xml  SinkBox.xml  Walker.xml  WalkerSingleBody.xml  dummy.xml  exampleEnvironment.xml  exampleEnvironmentRandomization.js  exampleVersion1_1.xml  languageGame.xml  languageGameCamera.val  languageGameMotorSettings.val  prototypeExample.xml  scriptedPrototypeExample.xml  soccerField.xml  soccerFieldCamera.val  soccerFieldCamera2.val  (+3 more)
nerd/applications/models/: passiveActuatorExample.js  trackDrive.nsm
nerd/applications/networkTemplates/: ASeriesTemplate.onn  ASeriesTemplateFlippedActivity.lyt  ASeriesTemplateFlippedActivity.onn  ASeriesTemplateSymMod.lyt  MSeriesTemplate.onn  MSeriesTemplate2.onn  MSeriesTemplateV1.lyt  MSeriesTemplateV1Symmetry.lyt  MSeriesTemplateV1Symmetry.onn  MSeriesTemplateV2GroupSym.onn  MSeriesTemplateV2ModulSym.onn  MSeriesTemplateV2PIDModulSym.onn  MSeriesTemplateV2c-Morphologic-GroupSym-BilateralSym-0startAngles-PID-Hand.onn  MSeriesTemplateV2c-Morphologic-GroupSym-BilateralSym-0startAngles-PID.onn  MSeriesTemplateV2c-Morphologic-GroupSym-BilateralSym-0startAngles-PID_withoutSensorBias.onn  MSeriesTemplateV2c-Morphologic-GroupSym-BilateralSym-0startAngles.onn  MSeriesTemplateV2c-Morphologic-GroupSym-Hardware.onn  MSeriesTemplateV2d--PID_Hardware_V1.onn  MSeriesTemplateV2d-Hardware_Hand_LR_Symmetry.onn  MSeriesTemplateV2d-Hardware_Hand_NoSymmetry.onn  MSeriesTemplateV2d-PID_Hardware_Hand_LR_Symmetry.onn  MSeriesTemplateV2d-PID_Hardware_Hand_LR_Symmetry_Buffered.onn  MSeriesTemplateV2d-PID_Hardware_Hand_LR_Symmetry_Buffered_Fast_URC.onn  MSeriesTemplateV2d-PID_Hardware_Hand_LR_Symmetry_Buffered_URC.onn  MSeriesTemplateV2d-PID_Hardware_Hand_NoSymmetry.onn  MSeriesTemplateV2d-PID_Hardware_Hand_V2.onn  SimbaASeriesTemplate.lyt  SimbaASeriesTemplate.smb
nerd/applications/neuroModules/: 2n-sigm-sinus-001.onn  2n-tanh-chaos-010.onn  3n-tanh-double-hyster.onn  3n-tanh-ring-osc-controlled.onn  3n-tanh-ring-osc.onn  4n-tanh-cross-osc.onn  4n-tanh-osc-OnOffControl.onn  4n-tanh-ring-osc.onn  AND-tanh.onn  Flip-Flop-sigm.onn  NAND-tanh.onn  OR-tanh.onn  SO(2)-Osci-sigm-001.onn  SO(3)-Osci-002.onn  SO2-Oscillator-tanh-2.onn  SO2-Oscillator-tanh.onn  URC.onn  _2n_sigm-chaos.001.onn  mrc.onn  velocity.onn
nerd/evolution/: CMakeLists.txt  evolution.pro
nerd/evolution/evolution/: CMakeLists.txt  EvolutionConstants.cpp  EvolutionConstants.h  evolution.pro
nerd/evolution/neuroAndSimEvaluation/: CMakeLists.txt  neuroAndSimEvaluation.pro
nerd/evolution/neuroEvolution/: CMakeLists.txt  NeuroEvolutionConstants.cpp  NeuroEvolutionConstants.h  neuroEvolution.pro
nerd/evolution/testEvolution/: CMakeLists.txt  TestConstants.cpp  TestConstants.h  main.cpp  testEvolution.pro
nerd/evolution/testNeuroEvolution/: CMakeLists.txt  TestNeuroEvolutionConstants.cpp  TestNeuroEvolutionConstants.h  main.cpp  testNeuroEvolution.pro
nerd/neuro/networkEditor/: CMakeLists.txt  NetworkEditorConstants.cpp  NetworkEditorConstants.h  networkEditor.pro
nerd/neuro/neuralNetwork/: CMakeLists.txt  (+3 more)
nerd/simulator/: CMakeLists.txt  simulator.pro
(+2147 files in other folders)
