cmake_minimum_required(VERSION 2.6)

add_subdirectory(NetworkDynamicsDiagramPlotterLib)
add_subdirectory(testNetworkDynamicsDiagramPlotterLib)
add_subdirectory(NetworkDynamicsDiagramPlotterApplication)
#add_subdirectory(NerdDynamicsAnalyzer)

#add_dependencies(NetworkDynamicsDiagramPlotterApplication nerd evolution neuralNetwork networkEditor NetworkDynamicsDiagramPlotterLib)




