
cmake_minimum_required(VERSION 2.6)

add_subdirectory(NerdClusterNeuroEvo)
add_subdirectory(NerdNetworkEditor)
add_subdirectory(NerdSim)
add_subdirectory(NerdNeuroEvo)
add_subdirectory(NerdNeuroSim)
#add_subdirectory(NerdMultiCoreNeuroEvo)

add_dependencies(NerdNeuroSim nerd simulator evolution odePhysics neuroEvolution neuroAndSimEvaluation)
add_dependencies(NerdNeuroEvo nerd simulator evolution odePhysics neuroEvolution neuroAndSimEvaluation networkEditor)
add_dependencies(NerdClusterNeuroEvo nerd simulator evolution odePhysics neuroEvolution neuroAndSimEvaluation)
add_dependencies(NerdNetworkEditor nerd simulator evolution odePhysics neuroEvolution neuroAndSimEvaluation networkEditor)
add_dependencies(NerdSim nerd simulator evolution odePhysics neuroEvolution neuroAndSimEvaluation)
#add_dependencies(NerdMultiCoreNeuroEvo nerd simulator evolution odePhysics neuroEvolution neuroAndSimEvaluation)

