
cmake_minimum_required(VERSION 2.6)

add_subdirectory(evolution)
add_subdirectory(testEvolution)
add_subdirectory(neuroEvolution)
add_subdirectory(testNeuroEvolution)
add_subdirectory(neuroAndSimEvaluation)

add_dependencies(evolution nerd)
add_dependencies(testEvolution evolution)
add_dependencies(neuroEvolution evolution neuralNetwork)
add_dependencies(testNeuroEvolution neuroEvolution)
add_dependencies(neuroAndSimEvaluation neuroEvolution evolution neuralNetwork simulator)