
cmake_minimum_required(VERSION 2.6)

add_subdirectory(evolution)
add_subdirectory(testEvolution)
add_subdirectory(neuroEvolution)
add_subdirectory(testNeuroEvolution)
add_subdirectory(neuroAndSimEvaluation)

add_dependencies(evolution nerd)
add_dependencies(testEvolution evolution nerd neuralNetwork networkEditor)
add_dependencies(neuroEvolution evolution neuralNetwork nerd networkEditor)
add_dependencies(testNeuroEvolution neuroEvolution nerd networkEditor)
add_dependencies(neuroAndSimEvaluation neuroEvolution evolution neuralNetwork simulator nerd networkEditor)
